--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.3.1",
     "axios": "^0.18.0",
+    "leaflet": "^1.3.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "~1.2.4"
